Fix CORS for Vercel preview domains