@@ -58,7 +58,11 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of(corsAllowedOrigin));
+        
+        // Support comma-separated list of origins
+        List<String> origins = java.util.Arrays.asList(corsAllowedOrigin.split("\\s*,\\s*"));
+        configuration.setAllowedOriginPatterns(origins);
+        
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
